codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__multiline_command_wraps_with_extra_indent_on_subsequent_lines.snap
---
source: tui/src/history_cell.rs
assertion_line: 1797
expression: rendered
---
• Ran
  └ set -o pipefail
    cargo test
        --all-features
        --quiet
